src/test/ui/label/label_misspelled_2.stderr
error: expected identifier, found keyword `for`
  --> $DIR/label_misspelled_2.rs:10:8
   |
LL |     c: for _ in 0..1 {
   |        ^^^ expected identifier, found keyword

error: expected `<`, found reserved identifier `_`
  --> $DIR/label_misspelled_2.rs:10:12
   |
LL |     c: for _ in 0..1 {
   |      -     ^ expected `<`
   |      |
   |      tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information

error[E0425]: cannot find value `b` in this scope
  --> $DIR/label_misspelled_2.rs:8:15
   |
LL |     'b: for _ in 0..1 {
   |     -- a label with a similar name exists
LL |         break b;
   |               ^
   |               |
   |               not found in this scope
   |               help: use the similarly named label: `'b`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
